Fixed issue with edit modal not scrolling all the way on mobile. Added CSS to improve touch capability of modal exit button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,8 @@ body
 	position: fixed;
 	z-index: 1;
 	padding-top: 100px;
+	position:absolute;
+	overflow:scroll;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -294,6 +296,7 @@ body
 	overflow: auto;
 	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.4);
+
 }
 
 .hidden
@@ -334,8 +337,13 @@ body
 {
 	color: #aaaaaa;
 	float: right;
-	font-size: 28px;
+	font-size: 50px;
 	font-weight: bold;
+	height: 45px;
+	width: 50px;
+	text-align: center;
+	border-radius: 50%;
+	border-style: groove;
 }
 
 .close:hover,
